Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.4, 6.8.3
-
-
94f0ff704 (dev), 617625ab0 (6.10), d28f3605f (6.9), 5078de363 (tqtc/lts-6.8), bc298f674 (tqtc/lts-6.5)
-
Foundation Sprint 131, Foundation Sprint 132
Description
When using QWebSocketServer on Windows, a new file is created under the AppData/Roaming/Microsoft/Crypto/RSA directory every time a new client connects. These files are not deleted after the connection is closed, nor when the application exits, leading to accumulation of leftover files over time.
Steps to Reproduce:
1. Run sslechoserver (https://doc.qt.io/qt-6.5/qtwebsockets-sslechoserver-example.html)
2. Start the server and connect a client.
3. After connected, check the folder:
%APPDATA%\Roaming\Microsoft\Crypto\RSA\<user SID>\
4. Observe a new file being added for each client connection.
5. Close client connection and exit the application.
6. Files remain in the folder.
Attachments
For Gerrit Dashboard: QTBUG-136055 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
655840,3 | Schannel: Use modern key management APIs | tqtc/esm-5.15 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
651495,6 | Schannel: Use modern key management APIs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
653009,2 | Schannel: Use modern key management APIs | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
653082,2 | Schannel: Use modern key management APIs | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
653128,5 | Schannel: Use modern key management APIs | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
654600,3 | Schannel: Use modern key management APIs | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | +1 |